welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:4: error: not found: value vuBiscuit
while(vuBiscuit != true){
      ^Program:6: error: not found: value estSurBisuit
	if(estSurBisuit()){
           ^Program:7: error: not found: value vuBiscuit
		vuBiscuit() = true;recule(6)}
                ^Program:4: error: type mismatch;
 found   : Unit
 required: Boolean
while(vuBiscuit != true){
^